loads of bug fixes before testing

--- a/app/views/register/sign-in.html
+++ b/app/views/register/sign-in.html
@@ -22,7 +22,7 @@
 
 
 
-	  <form action="/register/business-name" method="get" class="form">
+	  <form action="/register/sign-in-or-create-account" method="get" class="form">
 
 		  <p style="">If you have not created an account yet, then please <a href="/register/business-name">register</a> first. </p>
 
@@ -42,7 +42,7 @@
 						  Password
 					  </label>
 					  <div id="show-new-question" style="width:100%;  margin-bottom:0px;">
-						  <input type="text" class="form-control" id="website" name="website" value="" style="width: 170px;">
+						  <input type="password" class="form-control" id="website" name="website" value="" style="width: 170px;">
 					  </div>
 				  </div>
 
@@ -59,16 +59,18 @@
 
 
 			  <div class="form-group">
-				  <input type="submit" class="button button-blue" formaction="/register/business-name" value="Sign in">
+				  <input type="submit" class="button button-blue" formaction="/register/sign-in-or-create-account" value="Sign in">
 			  </div>
 
 	  </form>
 
     </div>
 
+	  <!--
 <div class="column-one-third">
 	{% include "includes/basket.html" %} 
 </div>
+-->
 
   </div>
 
