--- a/app/views/register/sign-in-or-create-account.html
+++ b/app/views/register/sign-in-or-create-account.html
@@ -25,7 +25,7 @@
 	  <form action="" method="post" class="form">
 
 		  <div class="form-group">
-			  <input type="submit" class="button button-blue" value="Sign in">
+			  <input type="submit" formaction="/register/sign-in" class="button button-blue" value="Sign in">
 		  </div>
 
 
