--- a/app/views/register/ticket-details.html
+++ b/app/views/register/ticket-details.html
@@ -189,7 +189,7 @@
 					  </label>
 					  <div id="show-new-question" style="width:80%;  margin-bottom:0px;">
 						  <input type="Password" class="form-control  {% if errorQuestionEmpty %} form-control-error {% endif %}"
-								 id="email-address" name="email-address" value="" style="width:80%;">
+								 id="password" name="password" value="" style="width:80%;">
 					  </div> 
 				  </div>
 
@@ -199,7 +199,7 @@
 					  </label>
 					  <div id="show-new-question" style="width:80%;  margin-bottom:0px;">
 						  <input type="Password" class="form-control  {% if errorQuestionEmpty %} form-control-error {% endif %}"
-								 id="email-address" name="email-address" value="" style="width:80%;">
+								 id="confirm-password" name="confirm-password" value="" style="width:80%;">
 					  </div> 
 				  </div>
 
