--- a/app/views/register/sign-in.html
+++ b/app/views/register/sign-in.html
@@ -26,23 +26,23 @@
 
 		  <p style="">If you have not created an account yet, then please <a href="/register/business-name">register</a> first. </p>
 
-			  <fieldset class="form-group id="email">
+			  <fieldset class="form-group>
 
 				  <div class="form-group form-control-2-3 {% if errorQuestionEmpty%} form-group-error {% endif %}">
 					  <label class="form-label" for="email-area">Email address</label>
 					  <div id="email-area" style="width:100%;  margin-bottom:0px;">
 						  <input type="text" class="form-control"
-								 id="business-name" name="business-name" value="" style="width:100%;">
+								 id="email-address" name="email-address" value="" style="width:100%;">
 					  </div>
 				  </div>
 		
 
 		          <div class="form-group {% if errorQuestionEmpty%} form-group-error {% endif %}">
-					  <label class="form-label" for="question">
+					  <label class="form-label" for="password">
 						  Password
 					  </label>
 					  <div id="show-new-question" style="width:100%;  margin-bottom:0px;">
-						  <input type="password" class="form-control" id="website" name="website" value="" style="width: 170px;">
+						  <input type="password" class="form-control" id="password" name="password" value="" style="width: 170px;">
 					  </div>
 				  </div>
 
