fix to sign in journey

--- a/app/views/register/sign-in.html
+++ b/app/views/register/sign-in.html
@@ -22,11 +22,11 @@
 
 
 
-	  <form action="/register/sign-in-or-create-account" method="get" class="form">
+	  <form action="" method="post" class="form">
 
 		  <p style="">If you have not created an account yet, then please <a href="/register/business-name">register</a> first. </p>
 
-			  <fieldset class="form-group>
+			  <fieldset class="form-group">
 
 				  <div class="form-group form-control-2-3 {% if errorQuestionEmpty%} form-group-error {% endif %}">
 					  <label class="form-label" for="email-area">Email address</label>
@@ -59,7 +59,7 @@
 
 
 			  <div class="form-group">
-				  <input type="submit" class="button button-blue" formaction="/register/sign-in-or-create-account" value="Sign in">
+				  <input type="submit" class="button button-blue"  value="Sign in">
 			  </div>
 
 	  </form>
