updates to upsell content

--- a/app/views/register/sign-in-or-create-account.html
+++ b/app/views/register/sign-in-or-create-account.html
@@ -36,12 +36,10 @@
 		  <p style="margin-bottom:15px;">By creating an account, you'll be able to:</p>
 
 		  <ul class="list list-bullet" style="margin-left:20px;">
-			  <li>save time when registering fro an event</li>
-			  <li>find events that are more relevant to you</li>
-			  <li>receive alerts tailored on your business</li>
+			  <li>sign up for and manage all other GREAT services with one single login</li>
+			  <li>quickly edit your event registration, schedule and personal details</li>
+			  <li>receive personalised industry insights and tips in your account dashboard</li>
 		  </ul>
-
-
 
 	  </form>
 
