updates to export experience

--- a/app/views/register/business-sector.html
+++ b/app/views/register/business-sector.html
@@ -1,7 +1,5 @@
 {% extends "layout.html" %}
-{% if loggedIn == undefined %}
-{% set loggedIn = false %}
-{% endif %}
+{% set loggedIn = true %}
 {% set external_journey = true %}
 
 {% block page_title %}
