updates to reminders and other things

--- a/app/views/register/business-name.html
+++ b/app/views/register/business-name.html
@@ -68,7 +68,7 @@
       {% endif %}
 
 
-	  <form action="/create-event/question-onwards" method="get" class="form">
+	  <form action="" method="post" class="form">
 
 
 		  	<fieldset class="form-group {% if session.previousQuestions.length == 0 %} js-hidden {% endif %}" style="margin-bottom:0; padding-bottom:30px" id="previous-questions">
@@ -299,7 +299,7 @@
 
 		  <div class="form-group">
 
-			  <input type="submit" class="button button-blue" formaction="/register/business-address" value="Continue">
+			  <input type="submit" class="button button-blue"  value="Continue">
 		  </div>
 
 
