--- a/app/views/register/reminder-email.html
+++ b/app/views/register/reminder-email.html
@@ -93,10 +93,10 @@ font-size: 24px
 									
 									<!-- CONTENT -->
 
-<h1 style="font-family:sans-serif;margin:30px 0;">Your event confirmation</h1>
+<h1 style="font-family:sans-serif;margin:30px 0;">Your event reminder</h1>
 <p class="text-content">Dear {{ data['first-name'] }},
 
-Thank you for deciding to join us for the following event:
+We're getting in touch to remind you about your upcoming event:
 
 <a href="#"><strong style="font-size:19px">{{data['event-title']}}</strong></a>
 
@@ -116,10 +116,6 @@ Thank you for deciding to join us for the following event:
 {{ data['organiser-name'] }}
 {{ data['contact-email'] }}
 {{ data['contact-phone'] }}
-
-
-Remember to regularly check the event web page for latest additions to the agenda, confirmed speakers and experts.
-<a href="#">http://www.trade.gov.uk/eventname</a>
 
 If you have any questions or special requests that will help you to get the most out of the day, please don't hesitate to get in touch. We'd be happy to assist.
 
